# real_crypto

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  main.tf  pyproject.toml  variables.tf
2_script/: docker-compose.yml  redpanda_log.txt
2_script/0_docker/: docker-compose.yml  flink-config.yaml
2_script/0_docker/streamlit/: Dockerfile
2_script/coinbase/: products.py
2_script/flink/: Dockerfile.flink
2_script/streamlit/: Dockerfile.streamlit
flink/: Dockerfile.producer  flink-config.yaml  pyproject.flink.toml
flink/src/: (deprecated)_consume_ticks.py  check_products.py  check_pyflink_functions.py  coinbase_producer.py  coinbase_ws.py  consume_ticks_tumble.py  create_topics.py  job.py  models.py  produce_ticks.py
prometheus/: prometheus.yml
ref/: notes.md  notes_architecture.md  notes_network.md  notes_tick_journey.md  spot.csv
src/: flink-config.yaml
streamlit/: deprecated_Dockerfile.streamlit
terraform/: main.tf  variables.tf
