[project]
name = "real-crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coinbase-advanced-py>=1.8.2",
    "dataclasses>=0.8",
    "kafka-python>=2.3.0",
    "numpy<2",
    "pandas<3",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
]
